btnx ChangeLog

2008-03-12	v.0.4.8
	* btnx requires libdaemon >= v.0.10.
	* Daemon functionality (PID file, output and logging, signals) handled more
	gracefully by libdaemon.
	* Refinement of ./configure script. Arguments:
	init_scripts_path = control init scripts path argument.
	config_path = path where btnx configuration files are stored.
	init_tool = set to no to disable init script registration. Otherwise,
	autodetects update-rc.d, chkconfig, and rc-update.
	output_syslog = set to yes to make btnx redirect output to syslog when
	started by the init script.

2008-03-06	v.0.4.7
	* btnx has been converted to use GNU autotools. Use ./configure before
	running make and install. See ./configure --help for additional
	arguments.
	* Compatible with btnx-config v. >= 0.4.7
	* Kernel 2.6.24 input interface changes required changes to reading
	the configuration data and reading event handlers.
	* Reads event handlers like it should have since the beginning.

2008-02-21	v.0.4.6
	* Added some more delay after modifier key press. Too short delay caused
	mouse button keycodes to be registered on some systems before modifier 
	keys. Resulted in combos not working properly.
	Fixes bug #193262: https://bugs.launchpad.net/btnx/+bug/193262

2008-01-03	v.0.4.5
	* Allows double-clicking by manually changing a button event type=1. This
	undocumented feature was blocked by the force release property.

2007-12-11	v.0.4.4
	* Fixed "2" file creation bug in init script.

2007-12-10	v.0.4.3
	* Init script stop command uses btnx to kill all processes. Previous
	implementation lead to race conditions between init script and btnx
	processes to read and kill PIDs. Also lead to duplicate btnx processes.
	Fixes bug #175088: https://bugs.launchpad.net/btnx/+bug/175088

2007-12-08	v.0.4.2
	* Fixed PID file bug. kill_pids() closed file descriptor that append_pid()
	required to append the PID of current process. Resulted in duplicate btnx
	processes.

2007-12-05	v.0.4.1